# flameplot

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
flameplot/: __init__.py  examples.py  flameplot.py
