[build-system]
requires = ["setuptools", "wheel", "KNRscore"]
build-backend = "setuptools.build_meta"

[project]
name = "flameplot"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "KNRScore is a Python package for computing K-Nearest-Rank Similarity, a metric that quantifies local structural similarity between two maps or embeddings."
readme = "README.md"
requires-python = ">=3"
license.file = "LICENSE"
keywords = ["Python", "tsne", "UMAP", "comparison"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['matplotlib','numpy','tqdm','scipy','imagesc','scatterd','requests', 'KNRscore']

[project.urls]
Homepage = "https://erdogant.github.io/KNRscore"
Download = "https://github.com/erdogant/flameplot/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["flameplot"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "flameplot.__version__" }
